--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -10,18 +10,18 @@
 <table class="Cars">
     <thead>
     <tr>
-        <th scope="col">carModel</th>
-        <th scope="col">length</th>
-        <th scope="col">width</th>
+        <th>carModel</th>
+        <th>length</th>
+        <th>width</th>
     </tr>
     </thead>
 
     <tbody>
     <tr th:each="car: ${cars}">
 
-        <td th:text="${car.carModel}"></td>
-        <td th:text="${car.length}"></td>
-        <td th:text="${car.width}"></td>
+        <td th:utext="${car.getModel()}"></td>
+        <td th:utext="${car.getLength()}"></td>
+        <td th:utext="${car.getWidth()}"></td>
 
 
     </tr>
